src/sections/OfflineEventsSection/OfflineEventsSection.css
/* //* EVENTS  */

.events_main_parent {

  display: flex;
  justify-content: center;
  align-items: center;
}

.events_main {
  width: 1200px;

}

.offlineevents {
  color: white;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  font-size: 48px;
  text-align: center;
  letter-spacing: 1px;
}

.eventsflex_maindiv {
  display: flex;
  justify-content: space-between;
  gap: 10px;
}

.events_flexmain {
  display: flex;
  flex-direction: column;
  justify-content: center;
  /*  align-items: center; */
  gap: 10px;
}

.event_flextext {
  color: #e13b3c;
  font-weight: 600;
  font-size: 3rem;
  font-family: 'Poppins';
  margin: 0px !important;
  margin-top: 10px !important;
  line-height: 44px;
}

.event_flextext span {
  font-size: 35px;
  font-weight: 500;
}

.events_flexcol:nth-child(2) .event_flextext,
.events_flexcol:nth-child(3) .event_flextext {
  color: white;
}

.event_smallimg {
  width: 222px;
  height: 169px;
  border-radius: 8px;
}

.event_largeimg {
  width: 222px;
  height: 283px;
  border-radius: 8px;
}

/* .events_flexmain:nth-child(odd) .event_largeimg {
  margin-top: 10px;
} */

.events_flexcol {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

/* .events_flexmain2>div>.event_largeimg,
.events_flexmain4>div>.event_largeimg {
  margin-top: -11px;
} */

@media screen and (max-width: 768px) {
  .eventsflex_maindiv {
    flex-wrap: wrap;
    justify-content: center;
    max-width: 98vw;
  }

  .events_flexmain3 {
    flex-direction: column-reverse;
  }

  .events_flexmain5 {
    flex-direction: row;
  }

  .event_smallimg {
    width: 212px;
    height: 159px;
    border-radius: 8px;
  }

  .event_largeimg {
    width: 212px;
    height: 273px;
    border-radius: 8px;
  }
}


@media screen and (max-width:450px) {

  .events_flexmain1,
  .events_flexmain2 {
    display: none;
  }

  .events_flexmain {
    flex-direction: row;
    align-items: center;
  }

  .event_smallimg {
    width: 140px;
    height: 104px;
    border-radius: 4px;
    /*  width: 60%; */
    /* object-fit: contain; */
  }

  /*   .events_flexcol {
    flex-direction: row;
  } */

  .event_largeimg {
    width: 140px;
    height: 198px;
    border-radius: 4px;

    /*  display: none; */
  }

  .event_flextext {
    font-size: 2rem;
    margin: 0px !important;
    margin-top: 5px !important;
    line-height: 1.8rem;
  }

  .event_flextext span {
    font-size: 1.5rem;
    word-break: break-word;
  }


}

/* .events_flexmain3, .events_flexmain4, .events_flexmain5 */

